@@ -63,6 +63,7 @@ Joram Agten - Patches
 Juergen-Michael Radtke - Bugreport
 Robert Becht - Feedback
 Lars Vogdt - Patches
+Birger Schmidt - Patches
 
 ###########################################
 #           NPCD Thanks                   #
