@@ -2,6 +2,7 @@
   * Bugfix:  Fixed rrd_convert.pl while running with --dry-run
   * Bugfix:  logging.c include missing header files ( Lars Vogdt )       
   * Bugfix:  Check if pnp4nagios/etc/rra.cfg is readable
+  * Feature: npcdmod.o increase perfdata buffer and log discarded perfdata ( Birger Schmidt )
 
 **pnp-0.6.16 11/21/2011**
   * Bugfix:  Fixed single quoted check_multi labels (Reported by Matthias Flacke)
